Fix error presentation on small session form

--- a/app/assets/stylesheets/session/session-form.scss
+++ b/app/assets/stylesheets/session/session-form.scss
@@ -21,7 +21,7 @@
   border: 1px transparent;
   background: $zero;
   color: $four;
-  // border: 1px solid gray;
+  padding-bottom: 10px;
   h3 {
     margin: 15px 35px 5px 35px;
     font-size: 1.5em;
@@ -43,7 +43,7 @@
   p {
     text-align: center;
     font-family: $serif;
-    margin: 5px 35px 20px 35px;
+    margin: 5px 35px 5px 35px;
     color: $four;
   }
   input[type='submit']:hover {
@@ -71,10 +71,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+  height: 45px;
+  padding: 5px 25px;
   li {
-    color: red;
+    width: 100%;
+    background: lightsalmon;
+    border: 2px solid red;
+    color: $five;
     text-align: center;
-    margin: 5px 2px;
+    margin: 5px 25px;
+    padding: 5px;
   }
 }
 
